--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<app-menu></app-menu>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="btn-container" id="main-content">
+    <div class="btn-div" *ngFor="let category of soundCategories">
+      <h1>{{ category.title }}</h1>
+      <ion-button class="categoriesBtn" (click)="showCategoryDetails(category)">
+        <img [src]="category.image" alt="icon for {{ category.title }}" class="category-img">
+      </ion-button>
+    </div>
   </div>
+
+  <app-footer></app-footer>
 </ion-content>
