--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,40 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content {
+    --background: #1E56a0;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+h1 {
+    color: #ffffff;
+    font-size: 1.1rem;
+    text-align: center;
+    color: #ffe605;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.btn-container {
+    display: grid;
+    grid-template-columns: repeat(2, 35%);
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin: 3rem auto;
 }
 
-#container a {
-  text-decoration: none;
+.categoriesBtn {
+    --background: #163172;
+    border: 5px solid #d6e4f0;
+    border-radius: 10px;
+    height: 30vmin;
+    width: 30vmin;
 }
+
+.backBtn,
+.homeBtn,
+.menuBtn {
+  --background: #163172;
+  --box-shadow: none;
+}
+
+.category-img {
+ height: 20vmin;
+ filter: invert(99%) sepia(39%) saturate(2%) hue-rotate(237deg) brightness(113%) contrast(93%);
+}
+
