--- a/src/app/sounds/sounds.page.scss
+++ b/src/app/sounds/sounds.page.scss
@@ -4,13 +4,16 @@
     align-items: center;
 }
 
+.space {
+    margin-bottom: 10rem;
+}
+
 .sounds-div {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    gap: 1rem;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 img {
@@ -41,7 +44,8 @@ ion-button {
     --color: #f6f6f6;
     border: 5px solid #d6e4f0;
     border-radius: 10px;
-    width: 90%;
+    width: 80%;
+    margin: 5px;
 }
 
 .ion-text-right {
