--- a/src/global.scss
+++ b/src/global.scss
@@ -3,10 +3,15 @@ body {
     place-items: center;
     padding: 0;
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     font-family: "Roboto";
+    box-sizing: border-box;
 }
 
 ion-content {
     --background: #1E56a0;
+}
+
+ion-button {
+    --ripple-color: #f6ff00;
 }
